# QuasarEngine_renderer

./: .gitignore  .gitmodules  CMakeLists copy.txt  CMakeLists.txt  Dependencies.lua  QuasarEngine.sln  README.md  premake5.lua
Editor/: CMakeLists.txt
Editor/src/: Editor.cpp
Quasar/: CMakeLists.txt
Quasar/src/: Quasar.h  qspch.h
Quasar/src/Core/: Core.h  EntryPoint.h
Quasar/src/Core/Application/: Application.cpp  Application.h
Quasar/src/Core/Camera/: Camera.cpp  Camera.h
Quasar/src/Core/EventSystem/: EngineEvents.cpp  Event.h
Quasar/src/Core/GameObject/: GameObject.h
Quasar/src/Core/Input/: KeyboardMovementController.h
Quasar/src/Core/Log/: Log.h
Quasar/src/Core/RenderSystem/: Buffer.cpp  Buffer.h  Descriptors.cpp  Descriptors.h  Device.cpp  Device.h  FrameInfo.h  Model.cpp  Model.h  Pipeline.cpp  RenderSystem.cpp  RenderSystem.h  Renderer.cpp  Renderer.h  SwapChain.cpp  SwapChain.h
Quasar/src/Shader/: compile.sh
Quasar/src/Shader/Code/: simple_shader.vert
QuasarEngine/: QuasarEngine.vcxproj  QuasarEngine.vcxproj.filters  premake5.lua
QuasarEngine/Shader/: compile.bat  simple_shader.vert
QuasarEngine/Shader/Code/: simple_shader.frag  simple_shader.vert
QuasarEngine/src/: Quasar.h  qspch.cpp  qspch.h
QuasarEngine/src/Quasar/: Application.cpp  Application.h  Core.h  EntryPoint.h  Log.cpp  Log.h
QuasarEngine/src/Quasar/Application/: Application.cpp  Application.h
QuasarEngine/src/Quasar/Buffer/: Buffer.cpp
QuasarEngine/src/Quasar/Camera/: Camera.cpp  Camera.h
QuasarEngine/src/Quasar/Device/: Device.cpp  Device.h
QuasarEngine/src/Quasar/EventSystem/: EngineEvents.h  Event.cpp  Event.h  EventSystem.cpp
QuasarEngine/src/Quasar/GameObject/: GameObject.cpp  GameObject.h
QuasarEngine/src/Quasar/Input/: KeyboardMovementController.cpp
QuasarEngine/src/Quasar/Log/: Log.cpp  Log.h
QuasarEngine/src/Quasar/Model/: Model.cpp  Model.h  ObjectLoader.h
QuasarEngine/src/Quasar/Pipeline/: Pipeline.cpp  Pipeline.h
QuasarEngine/src/Quasar/RenderSystem/: Descriptors.h  Device.cpp  Device.h  FrameInfo.h  Model.cpp  Pipeline.cpp  Pipeline.h  RenderSystem.cpp  RenderSystem.h  Renderer.h
QuasarEngine/src/Quasar/RenderSystem/Systems/: PointLightSystem.cpp  PointLightSystem.h  RenderSystem.cpp  RenderSystem.h
QuasarEngine/src/Quasar/Renderer/: Pipeline.h  Renderer.cpp  Renderer.h  SwapChain.cpp  SwapChain.h
QuasarEngine/src/Quasar/SwapChain/: SwapChain.cpp  SwapChain.h
QuasarEngine/src/Quasar/Utils/: Utils.h
QuasarEngine/src/Quasar/Window/: Window.cpp  Window.h
QuasarEngine/src/Shader/: compile.bat
QuasarEngine/src/Shader/Code/: point_light.vert  simple_shader.frag  simple_shader.vert
Sandbox/: Sandbox.vcxproj  premake5.lua
Sandbox/src/: SandboxApp.cpp
Sandbox/src/Shader/Code/: simple_shader.frag  simple_shader.vert
bin-int/Debug-x64/QuasarEngine/: QuasarEngine.dll.recipe  QuasarEngine.ilk  vc143.idb
bin-int/Debug-x64/QuasarEngine/QuasarEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  QuasarEngine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog
bin-int/Debug-x64/Sandbox/: Sandbox.exe.recipe  Sandbox.ilk  vc143.idb
bin-int/Debug-x64/Sandbox/Sandbox.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
